[project]
name = "hundred-keks"
version = "0.1.16"
authors = [
    { name = "8baller", email = "8ball030@gmail.com" },
    { name = "Mihai Cosma", email = "mcosma@gmail.com" }
]
requires-python = ">= 3.10"
description = "Python API for 100x"
readme = "README.md"
dependencies = [
  "eip712-structs@git+https://github.com/wakamex/py-eip712-structs.git",
  "web3",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.pytest.ini_options]
markers = [
    "dev: test devnet (select with '-m dev')",
]
addopts = [
  "-m not dev",
  "-r A",
  "--tb=long",
  "--verbosity=2",
  "--log-cli-level=INFO",
]