[project]
name = "hundred-keks"
version = "0.1.16"
authors = [
    { name = "8baller", email = "8ball030@gmail.com" },
    { name = "Mihai Cosma", email = "mcosma@gmail.com" }
]
requires-python = ">= 3.10"
description = "Python API for 100x"
readme = "README.md"
dependencies = [
  "eip712-structs@git+https://github.com/wakamex/py-eip712-structs.git",
  "web3",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[tool.ruff]
# Assume Python 3.12
target-version = "py312"
line-length = 120

[tool.ruff.lint]
# Default is: pycodestyle (E) and Pyflakes (F)
# We add flake8-builtins (A), pydocstyle (D), isort (I), pep8-naming (N), and pylint (PL).
# We remove pycodestyle (E) since it throws erroneous line too long errors.
# We remove Pyflakes (F) since it complains about `import *` which we need.
select = ["A", "D", "I", "N", "PL"]

# We ignore the following rules:
# D100: Missing docstring in public module
# D103: Missing docstring in public function
# D203: 1 blank line required before class docstring (incompatible with D211: no blank lines before class docstring)
# D213: multi-line-summary-second-line (incompatible with D212: multi-line summary should start at the first line)
# D406: Section name should end with a newline
# D407: Missing dashed underline after section (not needed for Google docstring format)
# D413: Missing blank line after last section
# PLR0913: Too many arguments in function definition
ignore = ["D100", "D103", "D203", "D213", "D406", "D407", "D413", "PLR0913"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "D", "I", "N", "PL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.pytest.ini_options]
markers = [
    "dev: test devnet (select with '-m dev')",
]
addopts = [
  "-m not dev",
  "-r A",
  "--tb=long",
  "--verbosity=2",
  "--log-cli-level=INFO",
]
